# ZappyCulteur

./: .gitignore  LICENSE  Makefile  README.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: c-lint.yml  check-build.yml  codeql.yml  cpp-lint.yml  cpp-liny.yml  label.yml  mirror.yml  py-lint.yml
bonus/ZappyCulteur/: .gitignore  .ignore  ZappyCulteur.uproject
bonus/ZappyCulteur/Config/: DefaultEngine.ini  DefaultGame.ini
bonus/ZappyCulteur/Content/Bee/: BEE.uasset  BEE_Anim.uasset  BEE_PhysicsAsset.uasset  BEE_Skeleton.uasset  Level1.uasset  Level2.uasset  Level3.uasset  Level4.uasset  Level5.uasset  Level6.uasset  Level7.uasset  Level8.uasset  Material_001.uasset  Material_002.uasset  Material_003.uasset  Material_004.uasset  Material_005.uasset  Material_009.uasset  Material_010.uasset  Material_011.uasset  Material_013.uasset
bonus/ZappyCulteur/Content/Cinematics/: LS_EndMenu.uasset  LS_MainMenu.uasset
bonus/ZappyCulteur/Content/Maps/: EndGame.umap  Game.umap  Menu.umap
bonus/ZappyCulteur/Content/Splash/: EdSplash.uasset  Splash.uasset
bonus/ZappyCulteur/Source/: ZappyCulteur.Target.cs  ZappyCulteurEditor.Target.cs
bonus/ZappyCulteur/Source/ZappyCulteur/: ZappyCulteur.Build.cs  ZappyCulteur.cpp  ZappyCulteurGameModeBase.cpp  ZappyCulteurGameModeBase.h
src/AI/: LICENSE  Makefile  README.md  gui2.csv  pyproject.toml  zappy_ai.py
src/AI/bonus/: README.md  SSkCSVGenerate.py  SSkTrain.py  SSkUse.py
src/AI/bonus/csv/: level1.csv  level2.csv  level3.csv  level4.csv  level5.csv  level6.csv  level7.csv  level8.csv
src/AI/bonus/tree/: README.md
src/AI/joblib/: food.joblib  level1.joblib  level2.joblib  level3.joblib  level4.joblib  level5.joblib  level6.joblib  level7.joblib  level8.joblib
src/AI/local_deps/: joblib-1.2.0-py3-none-any.whl  requirements.txt  threadpoolctl-3.1.0-py3-none-any.whl
src/AI/local_deps/simple/: index.html
src/AI/local_deps/simple/joblib/: index.html
src/AI/local_deps/simple/numpy/: index.html
src/AI/local_deps/simple/pandas/: index.html
src/AI/local_deps/simple/pip/: index.html
src/AI/local_deps/simple/python-dateutil/: index.html
src/AI/local_deps/simple/pytz/: index.html
src/AI/local_deps/simple/scikit-learn/: index.html
src/AI/local_deps/simple/scipy/: index.html
src/AI/local_deps/simple/setuptools/: index.html
src/AI/local_deps/simple/six/: index.html
src/AI/local_deps/simple/threadpoolctl/: index.html
src/AI/local_deps/simple/tzdata/: index.html
src/AI/local_deps/simple/wheel/: index.html
src/AI/zappy_ia/: Client.py  ClientManager.py  CoreIA.py  DecisionTree.py  ElevationParticipant.py  Enums.py  IA.py  Log.py  MessageEnum.py  cheater.py  somefile.py
src/AI/zappy_ia/Personnality/: Basic.py  Cheater.py  IPersonnality.py  Personnality.py
src/GUI/: CMakeLists.txt  Makefile  compile_flags.txt  format.sh
src/GUI/Dependencies/: build-SFML.cmake
src/GUI/src/: App.cpp  App.hpp  CMakeLists.txt  CommandHandler.cpp  CommandHandler.hpp  DisplayModule.cpp  DisplayModule.hpp  EntityManager.cpp  EntityManager.hpp  Main.cpp  Main.hpp  Parser.cpp  Parser.hpp  main.cpp
src/GUI/src/Components/: AComponent.cpp  AComponent.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Color.cpp  Color.hpp  CompQuery.cpp  CompQuery.hpp  IComponent.hpp  InputField.cpp  InputField.hpp  Music.cpp  Music.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
src/GUI/src/Display/: ADisplayModule.cpp  ADisplayModule.hpp  CMakeLists.txt  IDisplayModule.hpp  SFML.cpp  SFML.hpp
src/GUI/src/Entities/: AEntity.cpp  AEntity.hpp  CMakeLists.txt  Egg.cpp  Egg.hpp  EndScreen.cpp  EndScreen.hpp  EntitiesManager.cpp  EntitiesManager.hpp  Expulsion.cpp  Expulsion.hpp  Floor.cpp  Floor.hpp  HUD.cpp  HUD.hpp  IEntity.hpp  Incantation.cpp  Incantation.hpp  Ressources.cpp  Ressources.hpp  StartMenu.cpp  StartMenu.hpp  Trantorian.cpp  Trantorian.hpp
src/GUI/src/Events/: CMakeLists.txt  EventsManager.cpp  EventsManager.hpp
src/GUI/src/Maths/: CMakeLists.txt  Vector2F.cpp  Vector2F.hpp  Vector3F.cpp  Vector3F.hpp
src/GUI/src/network/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.hpp
src/GUI/src/server/: ServerConnection.cpp  ServerConnection.hpp
src/GUI/src/window/: Window.cpp  Window.hpp
src/GUI/tests/: CommandHandlerTests.cpp  network.cpp  sfmlWindow.cpp
src/SERVER/: .gitignore  Makefile  compile_flags.txt
src/SERVER/include/: args.h  broadcast_events.h  client.h  command_reponses.h  handle_signal.h  llog.h  map.h  ntw.h  trantorien.h  zappy.h
src/SERVER/libs/: Makefile
src/SERVER/libs/circularbuffer/: Makefile
src/SERVER/libs/tinylibc/: .gitignore  Doxyfile  Makefile  README.md  compile_flags.txt
src/SERVER/src/: broadcast_graphic.c  get_id.c  handle_signal.c  main.c  on_new_conn.c  zappy_check_end.c  zappy_create_initial_egg.c  zappy_destroy.c  zappy_find_trantorien_by_id.c  zappy_init.c  zappy_server_update.c
src/SERVER/src/args/: args_debug.c  args_destroy.c  args_init.c
src/SERVER/src/client/: client_destroy.c  client_init.c
src/SERVER/src/llog/: internal.c  internal.h  write_f.c  write_fd.c
src/SERVER/src/loop/: get_updated_from_events.c  internal.h  kill_dead_ai.c  loop.c  refuse_client_connection.c  update_client_not_connected.c  update_client_waiting_slot_opened.c  update_client_waiting_team_name.c  update_food.c
src/SERVER/src/map/: map_add_ressources.c  map_destroy.c  map_index_i_to_x_y.c  map_init.c
src/SERVER/src/network/: internal_read_command.c  internal_remove_client_clean.c  ntw_destroy.c  (+7 more)
src/SERVER/tests/: args_t.c  cmd_move.c  zappy_t.c
tests/SERVER/: zappy_t.c
tests/SERVER/libcircular/: create.c  destroy.c  read.c
(+622 files in other folders)
